# minecraft_server_log_hook_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
.github/workflows/: build-docker.yml
minecraft_bedrock_log_api/: cli.py
minecraft_server_log_hook_api/: __init__.py  cli.py
scripts/: create_jwt_token.py
