[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]


[tool.poetry]
name = "minecraft-server-log-hook-api"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
